[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-open-env"
version = "1.0.0"
description = "Customer Support Environment - OpenEnv compatible interactive environment for customer support task solving"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openenv-core>=0.2.0",
    "gradio==5.25.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "openai>=2.7.2",
    "pydantic==2.11.3",
    "pyyaml==6.0.2",
    "requests==2.32.3",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]

[tool.setuptools]
packages = ["customer_support_env", "server"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
